--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,162 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Ubuntu&display=swap');
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Ubuntu";
+  color: #333;
+  background-color: #B1BCA0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  font-family: "Roboto Condensed";
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.navbar h1 {
+  color: white;
+}
+
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+
+.navbar a:hover {
+  color: pink;
+}
+
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+/* blog previews / list */
+
+.side {
+  padding: 10px 16px;
+  margin: 20px 0;
+}
+
+.side:hover {
+  box-shadow: 1px 3px 5px pink;
+}
+
+.side h2 {
+  font-size: 20px;
+  color: beige;
+  margin-bottom: 8px;
+}
+
+.side a {
+  text-decoration: none;
+}
+
+
+/* blog details page */
+.side-details h2 {
+  font-size: 20px;
+  color: black;
+  margin-bottom: 10px;
+}
+
+.blog-details div {
+  margin: 20px 0;
+}
+
+.gitbutton{
+  text-decoration: none;
+    text-decoration: none;
+    background-color: beige;
+    font-size: 20px;
+}
+.side-details button {
+  background: beige;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.spotify {
+  height: 150px;
+  width: 150px;
+  text-align: right;
+}
+
+.homodeus {
+  height: 200px;
+  width: 130px;
+  vertical-align: middle;
+}
+
+.apple {
+  height: 200px;
+  width: 200px;
+  vertical-align: middle;
+}
+
+.tangled {
+  height: 200px;
+  width: 150px;
+  vertical-align: middle;
+}
+
+.homepage h1 {
+    font-size: 80px;
+    color: beige;
+}
+
+.homepage h2 {
+  font-size: 32px;
+}
+
+.homepage p {
+  font-size: 25px;
+}
+
+.favourite h3 {
+    font-size: 25px;
+    text-align: left;
+}
+
+.linkedin  {
+  height: 50px;
+  width: 50px;
+    padding: 10px;
+}
+
+.git {
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+}
+
+.devpost {
+  height: 60px;
+  width: 60px;
+  padding: 5px;  
+}
+
+.mail {
+  height: 60px;
+  width: 60px;
+  padding: 5px;
+}
+
+.favourite i {
+  color: beige;
+  text-decoration: none;
 }
